fixed scrollbar for chrome

--- a/style.css
+++ b/style.css
@@ -12,7 +12,14 @@ body {
   margin: 0px;
   overflow: hidden;
   padding: 0px;
-  overflow-y: scroll
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+body::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
 }
 
 #cards {
